--- a/docker/Makefile
+++ b/docker/Makefile
@@ -7,7 +7,7 @@ up:
 	docker compose -f ./docker-compose.yml up -d
 
 go:
-	docker exec -it -w /root cluster-vim /bin/zsh
+	docker exec -it -w /root cluster-tool /bin/zsh
 
 down:
 	docker compose -f ./docker-compose.yml down
