Dockerfile modification: Fixed errors that occurred during nvm installation and added environment variable settings.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,19 +1,20 @@
 FROM debian:bookworm-slim
 
 RUN apt-get update && \
-	apt-get install -y --no-install-recommends \
+	apt-get install -y \
 		dumb-init build-essential \
 		git curl zsh vim clangd
-
-ENV LC_ALL=C.UTF-8
-ENV NVM_DIR /root/.nvm
 
 SHELL ["/bin/zsh", "-c"]
 RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended && \
 	echo -e 'alias c=clear\n' >> /root/.zshrc
 
+ENV LC_ALL=C.UTF-8
+ENV NVM_DIR /root/.nvm
+
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.3/install.sh | bash && \
 	echo 'export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"' >> /root/.zshrc && \
+	echo '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm' >> /root/.zshrc && \
 	. /root/.nvm/nvm.sh && \
 	nvm install 16 && \
 	${NVM_DIR}/nvm.sh
