--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     container_name: cluster-tools
     volumes:
-      - server:/root/.host_root
+      - server:/root/home
     stdin_open: true
     tty:  true
 volumes:
@@ -12,4 +12,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /
+      device: ${HOST_HOME}/
