docker: Add configuration for coc extensions and update uninstall script for better cleanup

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,6 +32,9 @@ RUN curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubuserconte
 RUN mkdir -p /root/.root
 RUN mkdir -p /root/.home
 RUN mkdir -p /root/.goinfre
+RUN mkdir -p /root/.config/coc/extensions
+RUN echo -n  '{}' >> /root/.config/coc/memos.json
+RUN . /root/.nvm/nvm.sh && cd /root/.config/coc/extensions && npm i coc-clangd
 
 RUN cd && rm -rf ~/songbird_vim_patcher
 
